--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,24 +1,28 @@
 @font-face {
-    font-family: 'DM-Bold';
-    src: url(../../public/fonts/DMSans_18pt-Bold.ttf);
+    font-family: 'Raleway-Bold';
+    src: url(../../public/fonts/Raleway-Bold.ttf);
 }
 
 @font-face {
-    font-family: 'DM-ExtraBold';
-    src: url(../../public/fonts/DMSans_18pt-ExtraBold.ttf);
+    font-family: 'Raleway-ExtraBold';
+    src: url(../../public/fonts/Raleway-Black.ttf);
 }
 
 @font-face {
-    font-family: 'DM-Medium';
-    src: url(../../public/fonts/DMSans_18pt-Medium.ttf);
+    font-family: 'Raleway-Medium';
+    src: url(../../public/fonts/Raleway-Medium.ttf);
 }
 
 @font-face {
-    font-family: 'DM-Regular';
-    src: url(../../public/fonts/DMSans_18pt-Regular.ttf);
+    font-family: 'Raleway-Regular';
+    src: url(../../public/fonts/Raleway-Regular.ttf);
 }
 
 @font-face {
-    font-family: 'DM-Light';
-    src: url(../../public/fonts/DMSans_18pt-Light.ttf);
+    font-family: 'Raleway-Light';
+    src: url(../../public/fonts/Raleway-Light.ttf);
+}
+
+body {
+    font-family: 'Raleway-Regular' !important;
 }
